# server-events-rs

./: Cargo.toml  README.md
spec/: Cargo.toml
spec/src/: lib.rs
src/: lib.rs  main.rs  state.rs
src/app/: gui.rs  mod.rs  pipeline.rs  window.rs
src/gui/: app.rs  event_loop.rs  gui.rs  mod.rs  tray_icon.rs  window.rs
