[package]
name = "server-events"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
description = "A Rust client with a GUI and even a taskbar icon that can be used to keep track of events on remote server(s)."


[workspace.package]
authors = ["Lut99"]
repository = "https://github.com/Lut99/server-events-rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = "0.27"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
image = "0.25"
log = "0.4"
notify-rust = "4"
tray-icon = "0.13"
winit = "0.29"


[workspace]
members = [
    "spec"
]
