[package]
name = "server-events"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
description = "A Rust client with a GUI and even a taskbar icon that can be used to keep track of events on remote server(s)."


[workspace.package]
authors = ["Lut99"]
repository = "https://github.com/Lut99/server-events-rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
egui-winit = "0.27"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
image = "0.25"
lazy_static = "1.4"
log = "0.4"
notify-rust = "4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serializable = { git = "https://github.com/Lut99/serializable-rs", features = ["serde-toml"] }
tray-icon = { version = "0.13", default-features = false }


[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"


[workspace]
members = [
    "spec"
]
